# OperatingSystem

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT.md  README.md  SECURITY.md  SOURCE_MANIFEST.sha256  rust-toolchain.toml  sanju-os-m2.patch  sanju-os-m3-m4.patch  sanju-os-m5.patch
.cargo/: config.toml
.github/workflows/: ci.yml
boot/uefi/: Cargo.toml
boot/uefi/src/: cpu.rs  main.rs  serial.rs
boot/uefi/src/arch/x86_64/: mod.rs  qemu.rs
capabilities/: capabilities.toml  smoke-expectations.txt
docs/: CAPABILITY_MATRIX.md
docs/adr/: 0001-rust-first.md  0002-uefi-x86-64-first.md  0003-modular-monolithic-kernel.md  0004-minimal-boot-dependencies.md  0005-firmware-exit-memory-map.md  0006-m2-cpu-memory-foundation.md  0007-interrupt-runtime-shell-ramfs.md  0008-m5-protected-userspace-startup.md  0009-foundation-freeze-memory-ownership.md
docs/architecture/: SYSTEM_OVERVIEW.md
docs/process/: BACKLOG.md  DEFINITION_OF_DONE.md  ENVIRONMENT_NOTE.md  RISK_REGISTER.md  SDLC.md  SPRINT_0.md  SPRINT_1.md  SPRINT_2.md  SPRINT_3_4.md  SPRINT_5.md  SPRINT_FOUNDATION_1.md
docs/requirements/: PRODUCT_REQUIREMENTS.md
docs/security/: THREAT_MODEL.md
docs/testing/: FOUNDATION_HARDENING_1_VALIDATION.md  M2_VALIDATION.md  M4_VALIDATION.md  M5_VALIDATION.md  TEST_STRATEGY.md
kernel/: Cargo.toml
kernel/src/: boot_info.rs  (+14 more)
scripts/: build-llvm-probe.sh  build-smoke.sh  build-user-programs.sh  build.sh  find-ovmf.sh  generate-capabilities.py  image.sh  run-qemu.sh  setup.sh  smoke-test.sh  source-check.py  verify-llvm-probe.sh
(+5 files in other folders)
