[workspace]
resolver = "2"
members = [
    "boot/uefi",
    "kernel",
]

[workspace.package]
edition = "2024"
rust-version = "1.97.0"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
